--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <p class="card__content-theme">Twitter</p>
       <h2 class="card__content-header">@zgve679jdv</h2>
       <p class="card__content-paragraph">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta porro,
-        tempora consequuntur vel dolore assumenda aspernatur cum dignissimos unde reprehenderit sint? Neque, id
-        consequuntur. Quibusdam sit officiis debitis corrupti. Quasi.
+        I mainly use Twitter to stay up to date for the latest news around software development.
+        Either straightly comes from the Devs or the company itself. Fortunately, the Devs here
+        also teach me a lot of insights about another skill sets that Devs must have. 
       </p><a class="card__content-link" href="https://twitter.com/zgve679jdv">Visit </a>
     </div>
   </div>
@@ -27,9 +27,9 @@
       <p class="card__content-theme">GitHub</p>
       <h2 class="card__content-header">ilhambara</h2>
       <p class="card__content-paragraph">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta porro,
-        tempora consequuntur vel dolore assumenda aspernatur cum dignissimos unde reprehenderit sint? Neque, id
-        consequuntur. Quibusdam sit officiis debitis corrupti. Quasi.
+        Like the most people do, GitHub is used to manage repository or sharing projects.
+        Similar things I do is look for open source project, especially when there's an event
+        to contribute and manage my team's repository for work, task, or for fun only.
       </p><a class="card__content-link" href="https://github.com/ilhambara">Visit </a>
     </div>
   </div>
@@ -41,9 +41,9 @@
       <p class="card__content-theme">Discord</p>
       <h2 class="card__content-header">Ilhambara#9556</h2>
       <p class="card__content-paragraph">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta porro,
-        tempora consequuntur vel dolore assumenda aspernatur cum dignissimos unde reprehenderit sint? Neque, id
-        consequuntur. Quibusdam sit officiis debitis corrupti. Quasi.
+        Fun place to hang out on the sidelines of tough days. I joined the server that discussing 
+        Web Dev things, Tech community, and a random servers with my friends. I could say that 
+        Discord is really enjoyable platform.
       </p><a class="card__content-link" href="https://discord.com/users/599008087701192734">Visit </a>
     </div>
   </div>
@@ -55,9 +55,9 @@
       <p class="card__content-theme">Instagram</p>
       <h2 class="card__content-header">@ilham.bara</h2>
       <p class="card__content-paragraph">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta porro,
-        tempora consequuntur vel dolore assumenda aspernatur cum dignissimos unde reprehenderit sint? Neque, id
-        consequuntur. Quibusdam sit officiis debitis corrupti. Quasi.
+        Currently, I use Instagram in a passive way. But I still have a plan to post someday. 
+        For now on, I only post stories depends on some condition. Speaking of which 
+        pulled me away is that people use Instagram nowadays in a different puprose.
       </p><a class="card__content-link" href="https://instagram.com/ilham.bara">Visit </a>
     </div>
   </div>
